# rust-easy-build

note_rest_api/: Cargo.toml  readme.md
note_rest_api/src/: handler-create-note.rs  handler-delete-note.rs  handler-edit-note.rs  handler-get-note.rs  handler-note-list.rs  main.rs
rust_backend_server/: Cargo.toml  README.md
rust_backend_server/src/: main.rs  models.rs  routes.rs
rust_todo/: .gitignore  README.md
rust_todo/Components/: CheckBox.jsx
rust_todo/pages/: index.js
rust_todo/rust/src/: main.rs
task_service/: Cargo.toml
task_service/src/: main.rs
task_service/src/api/: task.rs
task_service/src/model/: task.rs
